Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16898

an error from a handled request can be reported in the new request

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      Sometimes, after disks failures we can see in the kernel logs that errors returned by osd_trans_stop() are actually from an earlier processed request because dr_error is not reset.

            panda Andrew Perepechko
            panda Andrew Perepechko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: